--- a/index.html
+++ b/index.html
@@ -124,9 +124,11 @@ margin-top: -20px;
 
 }
   </style>
+
 </head>
 
 <body>
+  <h1>MY NAME IS DANIEL OLAYIMIKA</h1>
   <div class="header">
     <div class="right">
       <p class="coursera">coursera</p>
